--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
 <head>
     <base target="_blank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Megathon'17 Online</title>
+    <title>Megathon'18</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
     <style>
@@ -67,13 +67,13 @@
 
 <body>
 
-    <!-- Written by Vivek Kaushal - For exclusive use of E-Cell, IIIT Hyderabad -->
+    <!-- Modified by Zubair Abid - For exclusive use of E-Cell, IIIT Hyderabad -->
 
     <form class="main" id="form" novalidate="novalidate" style="max-width: 480px;margin: 40px auto;">
         <div id="forminner">
             <div class="row">
                 <div class="col s12">
-                    <h5 class="center-align teal-text">Submission Portal - Megathon'17</h5>
+                    <h5 class="center-align teal-text">Submission Portal - Megathon'18</h5>
                 </div>
             </div>
             <div class="row">
@@ -90,32 +90,26 @@
             </div>
             <div class="row">
                 <div class="input-field col s12">
-                    <input id="amazon" checked="checked" type="radio" name="ps" class="validate" value="amazon" aria-required="true">
-                    <label for="amazon">Amazon</label>
+                    <input id="ea" checked="checked" type="radio" name="ps" class="validate" value="ea" aria-required="true">
+                    <label for="ea">EA</label>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field col s12">
+                    <input id="joveo" type="radio" name="ps" class="validate" value="joveo" aria-required="true">
+                    <label for="joveo">Joveo</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input id="pwc1" type="radio" name="ps" class="validate" value="pwc1" aria-required="true">
-                    <label for="pwc1">PwC - Smart Cities</label>
+                    <label for="pwc1">PwC - Mosquitoes and Drones</label>
                 </div>
             </div>
             <div class="row">
                 <div class="input-field col s12">
                     <input id="pwc2" type="radio" name="ps" class="validate" value="pwc2" aria-required="true">
-                    <label for="pwc2">PwC - Security</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="ibm" type="radio" name="ps" class="validate" value="ibm" aria-required="true">
-                    <label for="ibm">IBM</label>
-                </div>
-            </div>
-            <div class="row">
-                <div class="input-field col s12">
-                    <input id="sheteam" type="radio" name="ps" class="validate" value="sheteam" aria-required="true">
-                    <label for="sheteam">She Team</label>
+                    <label for="pwc2">PwC - Tackling malware</label>
                 </div>
             </div>
 
@@ -150,7 +144,7 @@
 
             <div class="row">
                 <div class="input-field col s6">
-                    <button class="waves-effect waves-light btn submit-btn" disabled="disabled" type="submit" onclick="submitForm(); return false;">Submission Closed</button>
+                    <button class="waves-effect waves-light btn submit-btn" type="submit" onclick="submitForm(); return false;">Submit</button>
                 </div>
             </div>
             <div class="row">
